fixes text jumping on load

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,6 +60,7 @@ a:active {
   justify-content: space-around;
   transition-duration: 0.4s;
   width: 100%;
+  height: 2em;
 }
 
 .title {
